--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(RWMH)
 export(VaR)
 export(cdfw)
 export(distreg)
+export(distreg_cfa)
 export(esvec)
 export(fitdist)
 export(fitlogit)
@@ -18,6 +19,7 @@ export(lapl_aprx)
 export(lapl_aprx2)
 export(logit)
 export(mcondist)
+export(parLply)
 export(par_distreg)
 export(par_distreg2)
 export(par_distreg3)
