--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Bayesian Distribution Regression
 Version: 0.1.0
 Author: Emmanuel Selorm Tsyawo & Weige Huang 
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: The package maintainer <estsyawo@temple.edu>
 Description: The package is used for computing bayesian distribution regression.
 License: GPL-2
 Encoding: UTF-8
