--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,18 @@
 export(IndepMH)
 export(LogitLink)
 export(RWMH)
+export(asymcnfB)
 export(distreg)
+export(distreg.asymp)
+export(distreg.sas)
 export(distreg_cfa)
+export(distreg_cfa.sas)
+export(dr_asympar)
 export(fitdist)
 export(fitlogit)
-export(getsmooth)
-export(getsmooth.spline)
 export(indicat)
+export(jdpar.asymp)
+export(jntCBOM)
 export(lapl_aprx)
 export(lapl_aprx2)
 export(logit)
