--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.1.0
 Authors@R: c(
   person("Emmanuel", "Tsyawo", email = "estsyawo@temple.edu", role = c("aut","cre")), person("Weige", "Huang", email = "weige.huang@temple.edu", role=c("aut")))
 Maintainer: Emmanuel Tsyawo <estsyawo@temple.edu>
-Description: Implements Bayesian Distribution Regression methods. This package contains functions for three estimators (non-asymptotic, semi-asymptotic and asymptotic) and other related routines for Bayesian Distribution Regression in the authors' article "Bayesian Distribution Regression" which is also the recommended reference to cite for this package. The functions can be grouped into three (3) categories. The first computes the logit likelihood function and posterior densities under uniform and normal priors. The second contains Independence and Random Walk Metropolis-Hastings Markov Chain Monte Carlo (MCMC) algorithms as functions and the third category of functions are useful for semi-asymptotic and asymptotic inference for distribution regression.
+Description: Implements Bayesian Distribution Regression methods. This package contains functions for three estimators (non-asymptotic, semi-asymptotic and asymptotic) and related routines for Bayesian Distribution Regression in Huang and Tsyawo (2018) <doi:10.2139/ssrn.3048658> which is also the recommended reference to cite for this package. The functions can be grouped into three (3) categories. The first computes the logit likelihood function and posterior densities under uniform and normal priors. The second contains Independence and Random Walk Metropolis-Hastings Markov Chain Monte Carlo (MCMC) algorithms as functions and the third category of functions are useful for semi-asymptotic and asymptotic Bayesian distribution regression inference.
+Depends: R (>= 2.1.0)
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
