update, package, new functions - rwMHgen and indepMHgen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(distreg_cfa.sas)
 export(dr_asympar)
 export(fitdist)
 export(fitlogit)
+export(indepMHgen)
 export(indicat)
 export(jdpar.asymp)
 export(jntCBOM)
@@ -24,4 +25,5 @@ export(posterior)
 export(prior_n)
 export(prior_u)
 export(quant_bdr)
+export(rwMHgen)
 export(simcnfB)
