updates, new functions, documentation edits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(par_distreg)
 export(posterior)
 export(prior_n)
 export(prior_u)
+export(psimval)
 export(quant_bdr)
 export(rwMHgen)
 export(simcnfB)
